--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,35 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+
+body {
+  margin: 0;
+  font-family: "Onest", system-ui, sans-serif;
+  background-color: rgb(15 23 42);
+}
+
+/*  :root {
+ font-family: Inter, system-ui, Helvetica, Arial, sans-serif; 
+}
+ */
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  color: #fafafa;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+/* :root {
+  font-family: system-ui, Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #242424;
+  background-color:  rgba(255, 255, 255, 0.87);;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -66,3 +90,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+ */
